# BeanCountersClassic

./: .gitignore  configure.ac
data/: Makefile.am
data/collider/: Makefile.am  bag_3.col  generate-collider.c  generate-penguins.c  gfx_blit_func.c  gfx_blit_func.h  oneup.col  penguin_1.col  penguin_10.col  penguin_2.col  penguin_3.col  penguin_4.col  penguin_5.col  penguin_6.col  penguin_7.col  penguin_8.col  penguin_9.col  savepng.c  savepng.h
data/desktop/: bean_counters_classic.desktop
etc/: Info.plist.in  Makefile.am  coffee_bag.icns
po/: POTFILES.in  bean-counters-classic.pot
src/: Makefile.am  beans.c  coffee_bag.rc  collider.c  collider.h  draw-text.c  draw-text.h  gfx_blit_func.c  gfx_blit_func.h  path.c  path.h  zoom.c  zoom.h
