gamedatadir = $(pkgdatadir)/data

nobase_dist_gamedata_DATA = images/background.png \
	images/penguin_1_back.png \
	images/penguin_1_color.png \
	images/penguin_1_front.png \
	images/penguin_2_back.png \
	images/penguin_2_color.png \
	images/penguin_2_front.png \
	images/penguin_3_back.png \
	images/penguin_3_color.png \
	images/penguin_3_front.png \
	images/penguin_4_back.png \
	images/penguin_4_color.png \
	images/penguin_4_front.png \
	images/penguin_5_1_front.png \
	images/penguin_5_2_front.png \
	images/penguin_5_3_front.png \
	images/penguin_5_back.png \
	images/penguin_5_color.png \
	images/penguin_6_1_back.png \
	images/penguin_6_1_color.png \
	images/penguin_6_1_front.png \
	images/penguin_6_2_back.png \
	images/penguin_6_2_color.png \
	images/penguin_6_2_front.png \
	images/penguin_6_3_front.png \
	images/penguin_6_4_front.png \
	images/penguin_6_5_front.png \
	images/penguin_6_6_front.png \
	images/penguin_7_back.png \
	images/penguin_7_color.png \
	images/penguin_7_front.png \
	images/penguin_8_1_front.png \
	images/penguin_8_2_front.png \
	images/penguin_8_3_front.png \
	images/penguin_8_back.png \
	images/penguin_8_color.png \
	images/plataform.png \
	images/bag_1.png \
	images/bag_2.png \
	images/bag_3.png \
	images/bag_4.png \
	images/bag_stack_01.png \
	images/bag_stack_02.png \
	images/bag_stack_03.png \
	images/bag_stack_04.png \
	images/bag_stack_05.png \
	images/bag_stack_06.png \
	images/bag_stack_07.png \
	images/bag_stack_08.png \
	images/bag_stack_09.png \
	images/bag_stack_10.png \
	images/bag_stack_11.png \
	images/bag_stack_12.png \
	images/bag_stack_13.png \
	images/bag_stack_14.png \
	images/bag_stack_15.png \
	images/bag_stack_16.png \
	images/bag_stack_17.png \
	images/bag_stack_18.png \
	images/bag_stack_19.png \
	images/bag_stack_20.png \
	images/bag_stack_21.png \
	images/bag_stack_22.png \
	images/bag_stack_23.png \
	images/bag_stack_24.png \
	images/bag_stack_25.png \
	images/bag_stack_26.png \
	images/bag_stack_27.png \
	images/bag_stack_28.png \
	images/bag_stack_29.png \
	images/bag_stack_30.png \
	images/bag_stack_31.png \
	images/bag_stack_32.png \
	images/bag_stack_33.png \
	images/bag_stack_34.png \
	images/bag_stack_35.png \
	images/bag_stack_36.png \
	images/bag_stack_37.png \
	images/bag_stack_38.png \
	images/bag_stack_39.png \
	images/bag_stack_40.png \
	images/bag_stack_41.png \
	images/bag_stack_42.png \
	images/bag_stack_43.png \
	images/bag_stack_44.png \
	images/bag_stack_45.png \
	images/bag_stack_46.png \
	images/bag_stack_47.png \
	images/bag_stack_48.png \
	images/bag_stack_49.png \
	images/bag_stack_50.png \
	images/bag_stack_51.png \
	images/bag_stack_52.png \
	images/bag_stack_53.png \
	images/bag_stack_54.png \
	images/bag_stack_55.png \
	images/bag_stack_56.png \
	images/bag_stack_57.png \
	images/bag_stack_58.png \
	images/bag_stack_59.png \
	images/bag_stack_60.png \
	images/truck.png \
	images/anvil_00.png \
	images/anvil_01.png \
	images/anvil_02.png \
	images/anvil_03.png \
	images/anvil_04.png \
	images/anvil_05.png \
	images/anvil_06.png \
	images/anvil_07.png \
	images/anvil_08.png \
	images/anvil_09.png \
	images/anvil_10.png \
	images/anvil_11.png \
	images/anvil_12.png \
	images/anvil_13.png \
	images/anvil_14.png \
	images/anvil_15.png \
	images/anvil_16.png \
	images/anvil_17.png \
	images/anvil_18.png \
	images/anvil_19.png \
	images/anvil_20.png \
	images/anvil_21.png \
	images/anvil_22.png \
	images/anvil_23.png \
	images/oneup.png \
	images/fish.png \
	images/fish_dropped.png \
	images/flower.png \
	images/flower_dropped.png \
	images/crash_1.png \
	images/crash_2.png \
	images/crash_3.png \
	images/crash_4.png \
	images/gameintro.png \
	images/penguin_intro_back.png \
	images/penguin_intro_color.png \
	images/penguin_intro_front.png \
	klickclack.ttf

# Instalar los archivos .desktop e iconos
applicationsdir = $(datadir)/applications
applications_DATA = desktop/bean_counters_classic.desktop

icons16dir = $(datadir)/icons/hicolor/16x16/apps
icons16_DATA = desktop/16x16/coffee_bag.png

icons32dir = $(datadir)/icons/hicolor/32x32/apps
icons32_DATA = desktop/32x32/coffee_bag.png

icons48dir = $(datadir)/icons/hicolor/48x48/apps
icons48_DATA = desktop/48x48/coffee_bag.png

icons64dir = $(datadir)/icons/hicolor/64x64/apps
icons64_DATA = desktop/64x64/coffee_bag.png

icons128dir = $(datadir)/icons/hicolor/128x128/apps
icons128_DATA = desktop/128x128/coffee_bag.png

icons256dir = $(datadir)/icons/hicolor/256x256/apps
icons256_DATA = desktop/256x256/coffee_bag.png

# touch the toplevel icon directory as required by the icon theme spec
install-data-hook:
	touch $(DESTDIR)$(datadir)/icons/hicolor

EXTRA_DIST = \
	desktop/bean_counters_classic.desktop	\
	desktop/16x16/coffee_bag.png		\
	desktop/32x32/coffee_bag.png		\
	desktop/48x48/coffee_bag.png		\
	desktop/64x64/coffee_bag.png		\
	desktop/128x128/coffee_bag.png		\
	desktop/256x256/coffee_bag.png		\
	coffee_bag.ico

SUBDIRS = collider
